// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Test Rna Editor Expanded component should render correctly in edit mode 1`] = `
<div
  class="css-19n58l"
  data-testid="rna-editor-expanded"
>
  <input
    class="css-9n8o5v"
    data-testid="name-your-structure-editbox"
    placeholder="Name your structure"
    value=""
  />
  <div
    class="css-1rkdsvc"
  >
    <div
      class="css-iku0qx"
      data-testid="rna-builder-slot--sugar"
    >
      <div
        class="css-gcbx4i"
      />
      <div
        class="css-oavnn6"
      >
        <svg
          class="css-gayeoq"
          name="sugar"
        />
      </div>
      <p
        class="css-iw6dsc"
      >
        Sugar
      </p>
    </div>
    <div
      class="css-iku0qx"
      data-testid="rna-builder-slot--base"
    >
      <div
        class="css-gcbx4i"
      />
      <div
        class="css-oavnn6"
      >
        <svg
          class="css-gayeoq"
          name="base"
        />
      </div>
      <p
        class="css-iw6dsc"
      >
        Base
      </p>
    </div>
    <div
      class="css-iku0qx"
      data-testid="rna-builder-slot--phosphate"
    >
      <div
        class="css-gcbx4i"
      />
      <div
        class="css-oavnn6"
      >
        <svg
          class="css-gayeoq"
          name="phosphate"
        />
      </div>
      <p
        class="css-iw6dsc"
      >
        Phosphate
      </p>
      <div
        class="phosphatePositionIconWrapperOnPresetCard"
      >
        <span
          aria-label="Phosphate on the right"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Select phosphate position"
            class="phosphatePositionTrigger"
            type="button"
          >
            <div
              class="phosphatePositionIconWrapper"
            >
              <svg
                name="preset-right-phosphate"
              />
            </div>
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1iug9fi"
  >
    <button
      class="css-jgpnj2"
      data-testid="cancel-btn"
      type="button"
    >
      Cancel
    </button>
    <button
      aria-label=""
      class="css-1hj6p0s"
      data-mui-internal-clone-element="true"
      data-testid="add-to-presets-btn"
      disabled=""
      type="button"
    >
      Add to Presets
    </button>
  </div>
</div>
`;

exports[`Test Rna Editor Expanded component should render correctly in edit mode with modification of sequence 1`] = `
<div
  class="rna-editor-expanded--sequence-edit-mode css-19n58l"
  data-testid="rna-editor-expanded"
>
  <input
    class="css-9n8o5v"
    data-testid="name-your-structure-editbox"
    disabled=""
    placeholder="Name your structure"
    value="2 nucleotides"
  />
  <div
    class="css-1rkdsvc"
  >
    <div
      class="css-iku0qx"
      data-testid="rna-builder-slot--sugar"
    >
      <div
        class="css-gcbx4i"
      />
      <div
        class="css-oavnn6"
      >
        <svg
          class="css-149rvax"
          name="sugar"
        />
      </div>
      <p
        class="css-p4815w"
      >
        R
      </p>
    </div>
    <div
      class="css-iku0qx"
      data-testid="rna-builder-slot--base"
    >
      <div
        class="css-gcbx4i"
      />
      <div
        class="css-oavnn6"
      >
        <svg
          class="css-149rvax"
          name="base"
        />
      </div>
      <p
        class="css-p4815w"
      >
        [multiple]
      </p>
    </div>
    <div
      class="css-iku0qx"
      data-testid="rna-builder-slot--phosphate"
    >
      <div
        class="css-gcbx4i"
      />
      <div
        class="css-oavnn6"
      >
        <svg
          class="css-149rvax"
          name="phosphate"
        />
      </div>
      <p
        class="css-p4815w"
      >
        P
      </p>
      <div
        class="phosphatePositionIconWrapperOnPresetCard"
      >
        <span
          aria-label="Phosphate on the right"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Select phosphate position"
            class="phosphatePositionTrigger"
            disabled=""
            type="button"
          >
            <div
              class="phosphatePositionIconWrapper"
            >
              <svg
                name="preset-right-phosphate"
              />
            </div>
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1iug9fi"
  >
    <button
      class="css-jgpnj2"
      data-testid="cancel-btn"
      type="button"
    >
      Cancel
    </button>
    <button
      aria-label=""
      class="css-1hj6p0s"
      data-mui-internal-clone-element="true"
      data-testid="save-btn"
      disabled=""
      type="button"
    >
      Update
    </button>
  </div>
</div>
`;

exports[`Test Rna Editor Expanded component should render correctly in view mode 1`] = `
<div
  class="css-19n58l"
  data-testid="rna-editor-expanded"
>
  <input
    class="css-9n8o5v"
    data-testid="name-your-structure-editbox"
    placeholder="Name your structure"
    value="MyRna"
  />
  <div
    class="css-1rkdsvc"
  >
    <div
      class="css-iku0qx"
      data-testid="rna-builder-slot--sugar"
    >
      <div
        class="css-gcbx4i"
      />
      <div
        class="css-oavnn6"
      >
        <svg
          class="css-gayeoq"
          name="sugar"
        />
      </div>
      <p
        class="css-iw6dsc"
      >
        Sugar
      </p>
    </div>
    <div
      class="css-iku0qx"
      data-testid="rna-builder-slot--base"
    >
      <div
        class="css-gcbx4i"
      />
      <div
        class="css-oavnn6"
      >
        <svg
          class="css-gayeoq"
          name="base"
        />
      </div>
      <p
        class="css-iw6dsc"
      >
        Base
      </p>
    </div>
    <div
      class="css-iku0qx"
      data-testid="rna-builder-slot--phosphate"
    >
      <div
        class="css-gcbx4i"
      />
      <div
        class="css-oavnn6"
      >
        <svg
          class="css-gayeoq"
          name="phosphate"
        />
      </div>
      <p
        class="css-iw6dsc"
      >
        Phosphate
      </p>
      <div
        class="phosphatePositionIconWrapperOnPresetCard"
      >
        <span
          aria-label="Phosphate on the right"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Select phosphate position"
            class="phosphatePositionTrigger"
            disabled=""
            type="button"
          >
            <div
              class="phosphatePositionIconWrapper"
            >
              <svg
                name="preset-right-phosphate"
              />
            </div>
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1iug9fi"
  >
    <button
      class="css-jgpnj2"
      data-testid="duplicate-btn"
      type="button"
    >
      Duplicate and Edit
    </button>
    <button
      class="css-jgpnj2"
      data-testid="edit-btn"
      type="button"
    >
      Edit
    </button>
  </div>
</div>
`;
